#857 Testcase for record Classes