@@ -45,6 +45,7 @@
         <module>maven</module>
         <module>integrationtest</module>
         <module>cli</module>
+        <module>languagefeatures</module>
     </modules>
 
     <properties>
@@ -260,18 +261,10 @@
             <activation>
                 <jdk>1.8</jdk>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <maven.compiler.target>1.8</maven.compiler.target>
+                <maven.compiler.source>1.8</maven.compiler.source>
+            </properties>
         </profile>
         <profile>
             <id>java11-compile</id>
@@ -281,163 +274,18 @@
                     <missing>DEFAULTJDKONLY.marker</missing>
                 </file>
             </activation>
+            <properties>
+                <maven.compiler.target>11</maven.compiler.target>
+                <maven.compiler.source>11</maven.compiler.source>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
+                            <source>11</source>
                             <target>11</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java12-compile</id>
-            <activation>
-                <jdk>12</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>12</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java13-compile</id>
-            <activation>
-                <jdk>13</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>13</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java14-compile</id>
-            <activation>
-                <jdk>14</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>14</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java15-compile</id>
-            <activation>
-                <jdk>15</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>15</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java16-compile</id>
-            <activation>
-                <jdk>16</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>16</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java17-compile</id>
-            <activation>
-                <jdk>17</jdk>
-                <file>
-                    <missing>DEFAULTJDKONLY.marker</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <target>17</target>
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
@@ -456,12 +304,17 @@
                     <missing>DEFAULTJDKONLY.marker</missing>
                 </file>
             </activation>
+            <properties>
+                <maven.compiler.target>20</maven.compiler.target>
+                <maven.compiler.source>20</maven.compiler.source>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
+                            <source>20</source>
                             <target>20</target>
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
